# surreal-with-backup

./: .gitignore  .gitmodules  Dockerfile  README.md  add_test_ns.sh  build_backman.sh  build_docker.sh  build_surreal.sh  docker_entrypoint.sh  get_orphan_processes.sh  start_surreal.sh
backup-man/: Cargo.toml
backup-man/src/: api.rs  config.rs  main.rs  s3_utils.rs  utils.rs
