[package]
name = "backup-man"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
daemonize-me = "2.0.1"
chrono = "0.4.23"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.24", features = ["derive"] }
futures = "0.3.25"
aws-creds = "0.34.0"
aws-region = "0.25.1"
rust-s3 = "0.33.0-beta5"
tokio-stream = "0.1"
tokio-util = { version = "0.7.4", features = ["codec", "io", "compat"] }